--- a/sources/stylesheets/modules/_variables.scss
+++ b/sources/stylesheets/modules/_variables.scss
@@ -16,6 +16,6 @@ $color-success: #409e13;
 // Media query breakpoints.
 $tablet: 1024px;
 $mobile: 640px;
-
-$blog-listing-tablet: 640px;
-$blog-listing-mobile: 240px;
+$tiny: 340px;
+$micro: 290px;
+$nano: 240px;
