--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1238,7 +1238,22 @@ a {
   border-style: solid;
   border-width: 1px;
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 240px) {
+  .article-top .top-inner {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 241px) {
+  .article-top .top-inner {
+    font-size: 13px;
+  }
+}
+@media screen and (min-width: 291px) {
+  .article-top .top-inner {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 341px) {
   .article-top .top-inner {
     font-size: 20px;
   }
@@ -1282,6 +1297,12 @@ a {
 }
 
 .article-title {
+  -webkit-hyphens: auto;
+     -moz-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+  word-break: break-word;
+  word-wrap: break-word;
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1.2;
